<resources>
    <string name="app_name">WebChatAndroid</string>
    <string name="action_settings">Settings</string>
    <string name="chatroom_3000">ChatRoom 3000!</string>
    <string name="login">Login</string>
    <string name="username">Username...</string>
    <string name="password">Password...</string>
    <string name="add_chatroom">Add ChatRoom</string>
    <string name="chatroom_name">ChatRoom name...</string>
</resources>
