<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_chatroom"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/inputOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/chatroom_name"
        android:inputType="text"
        android:autofillHints="">

        <requestFocus />

    </EditText>

    <EditText
        android:id="@+id/inputTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textWebPassword"
        android:autofillHints="">

    </EditText>

</LinearLayout>